[iOS] Don't disable fullscreen for SSL with UI refresh enabled.

The omnibox and its security indicator remains on screen even when
in fullscreen mode, so there is no longer a need to disable fullscreen
for the UI refresh.

Bug: 840828
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I5eb89f2992fec399287807d77089a34af88d141c
Reviewed-on: https://chromium-review.googlesource.com/1050376
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556830}
Former-commit-id: 6123a89c7f9d01db2d4ab0cf011d37b1bf33b294